# distric

./: CMakeLists.txt  LICENSE  README.md  distric_obs_20260216_201941.txt  distric_obs_20260218_120107.txt  distric_obs_20260219_103642.txt  distric_protocol_20260202_095942.txt  distric_protocol_20260202_184427.txt  distric_transport_20260219_180437.txt  fix_log_nulls.py
docs/: distric_implementation.md  distric_requirements.md  distric_state_tracker.md  llm_implementation_guide.md
libs/distric_cluster/: CMakeLists.txt
libs/distric_cluster/examples/: config_manager.c  coordinator_node.c  worker_node.c
libs/distric_cluster/include/: distric_cluster.h
libs/distric_cluster/include/distric_cluster/: cluser_coordinator.h  cluster_coordinator.h  config_manager.h  worker_pool.h
libs/distric_cluster/src/: cluster_coordinator.c  config_manager.c  worker_pool.c
libs/distric_cluster/tests/: CMakeLists.txt  test_cluster_config_manager.c  test_cluster_integration.c
libs/distric_gossip/: CMakeLists.txt  README.md
libs/distric_gossip/include/: distric_gossip.h
libs/distric_gossip/include/distric_gossip/: gossip_conflict_resolution.h  gossip_internal.h  messages.h
libs/distric_gossip/src/: gossip_conflict_resolution.c  gossip_core.c  gossip_lifecycle.c  gossip_membership.c
libs/distric_gossip/tests/: CMakeLists.txt  test_gossip.c  test_gossip_basic.c  test_gossip_conflict_resolution.c
libs/distric_obs/: API.md  CMakeLists.txt  QUICKSTART.md  README.md
libs/distric_obs/include/: distric_obs.h
libs/distric_obs/include/distric_obs/: error.h  health.h  http_server.h  logging.h  metrics.h  tracing.h
libs/distric_obs/src/: error.c  health.c  http_server.c  logging.c  metrics.c  tracing.c
libs/distric_obs/tests/: CMakeLists.txt  bench_logging.c  bench_metrics.c  test_distric_obs.c  test_failure_modes.c  test_health.c  test_http_server.c  test_integration.c  test_logging.c  test_metrics.c  test_production_hardening.c  test_stress.c  test_stress_production.c  test_tracing.c
libs/distric_protocol/: API.md  CMakeLists.txt  README.md
libs/distric_protocol/include/: distric_protocol.h
libs/distric_protocol/include/distric_protocol/: auth.h  binary.h  byteswap.h  capability.h  crc32.h  error_info.h  limits.h  messages.h  rpc.h  tlv.h
libs/distric_protocol/src/: auth.c  binary.c  capability.c  crc32.c  error_info.c  messages.c  rpc.c  tlv.c
libs/distric_protocol/tests/: CMakeLists.txt  fuzz_auth.c  fuzz_header.c  fuzz_tlv.c  test_binary.c  test_integration.c  test_messages.c  test_protocol_binary.c  test_protocol_improvements.c  test_protocol_integration.c  test_protocol_messages.c  test_protocol_production.c  test_protocol_tlv.c  test_rpc.c  test_tlv.c
libs/distric_raft/: CMakeLists.txt  README.md
libs/distric_raft/include/: distric_raft.h
libs/distric_raft/include/distric_raft/: raft_core.h  raft_messages.h  raft_persistence.h  raft_replication.h  raft_rpc.h
libs/distric_raft/src/: raft_core.c  raft_messages.c  raft_persistence.c  raft_replication.c  raft_rpc.c
libs/distric_raft/tests/: CMakeLists.txt  raft_test_framework.c  raft_test_framework.h  test_raft_basic.c  test_raft_cluster.c  test_raft_conflicting_logs.c  test_raft_higher_term.c  test_raft_leader_completeness.c  test_raft_leader_stability.c  test_raft_minority_no_leader.c  test_raft_persistence.c  test_raft_replication.c  test_raft_rpc.c  test_raft_snapshot.c  test_raft_split_vote.c
libs/distric_transport/: API.md  CMakeLists.txt  README.md
libs/distric_transport/include/: distric_transport.h
libs/distric_transport/include/distric_transport/: tcp.h  tcp_pool.h  transport_config.h  transport_error.h  udp.h
libs/distric_transport/src/: circuit_breaker.c  circuit_breaker.h  send_queue.c  send_queue.h  tcp.c  tcp_pool.c  transport_config.c  transport_error.c  udp.c
libs/distric_transport/tests/: CMakeLists.txt  test_backpressure.c  test_integration.c  test_tcp.c  test_tcp_pool.c  test_transport_backpressure.c  test_transport_chaos.c  test_transport_error_taxonomy.c  test_transport_integration.c  test_transport_shutdown.c  test_transport_tcp.c  test_transport_tcp_pool.c  test_transport_udp.c  test_transport_udp_ratelimits.c  test_udp.c
scripts/: validate.sh
